@@ -20,6 +20,9 @@ with Magick++ itself.
     rather than just a filename.<BR>
   <LI> Added Drawable objects (DrawablePushPattern &amp; DrawablePopPattern)
     for definining arbitrary named patterns to be used for stroke and fill.
+  <LI> Added Image strokePattern() and fillPattern() methods for specifying
+    image to use while drawing stroked object outlines and while filling
+    objects, respectively.
 
 </UL>
 <p>
